# ProgettoPCS2025

./: .README.md.swp  CMakeLists.txt  README.md  main  main.cpp
src/: CMakeLists.txt  Polygon.cpp  Polygon.hpp  Polyhedron.cpp  Polyhedron.hpp
src_test/: test_sorting_algorithm.hpp
